--- a/PzProject/View/LoginPage.xaml
+++ b/PzProject/View/LoginPage.xaml
@@ -8,18 +8,18 @@
       d:DesignHeight="300" d:DesignWidth="300"
       Title="LoginPage">
 
-    <Grid Background="LightGray">
-        <StackPanel Background="#B6CDBD" Margin="10">
+    <Grid Background="#E1E4ED">
+        <StackPanel Background="#2E294E" Margin="10">
             <TextBlock Text="Logowanie: " 
                        FontSize="16" 
                        FontWeight="Bold"
-                       Foreground="#475849"
+                       Foreground="#E1E4ED"
                        HorizontalAlignment="Center"
                        Margin="10"/>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                 <TextBlock Text="Login:"
                            FontWeight="Bold"
-                           Foreground="#475849"/>
+                           Foreground="#E1E4ED"/>
                 <TextBox Text="{Binding Path=Login}" Width="200"
                          Margin="10 0 10 0"/>
             </StackPanel>
@@ -27,7 +27,7 @@
                         Margin="0 10 0 0">
                 <TextBlock Text="Haslo:" 
                            FontWeight="Bold" 
-                           Foreground="#475849"/>
+                           Foreground="#E1E4ED"/>
                 <PasswordBox Width="200" Margin="10 0 10 0"
                              Name="PasswordBox"/>
             </StackPanel>
